[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
bs4 = "^0.0.1"
lxml = "^4.8.0"
pandas = "^1.4.1"
selenium = "^4.1.3"
requests = "^2.27.1"
ipython = "^8.2.0"
requests-html = "^0.10.0"
python-dotenv = "^0.20.0"
tabulate = "^0.8.9"
Flask = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"